Finished adding about and contact pages.

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@ body {
   .navbar {
     overflow: hidden;
     background-color: #333;
+    top: 100px;
+    position: fixed;
+    width: 100%;
+    
   }
   
   .navbar a {
