--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,13 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
   }
-  
+
   .navbar {
     background-color: #333;
     top: 100px;
     width: 100%;
     position: fixed;
+    z-index: 999 !important;
   }
   
   .navbar a {
@@ -23,7 +24,6 @@ body {
   
   .dropdown {
     float: left;
-    overflow: hidden;
   }
   
   .dropdown .dropbtn {
@@ -47,7 +47,6 @@ body {
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
   }
   
   .dropdown-content a {
