div content body

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,13 @@ body {
     position: fixed;
     z-index: 999 !important;
   }
+
+  #content {
+    min-height:425px; 
+    top: 200px; 
+    position: fixed; 
+    width: 100%;
+ }
   
   .navbar a {
     float: left;
