--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,6 @@
 <h1>Contact</h1>
 
+<div id="content">This is the Contact page. <br>
+<iframe id="fred" style="border:1px solid #666CCC" title="PDF in an i-Frame" src="../../assets/resume.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 
-<div id="content">This is the Contact page.</div>
+</div>
